<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="action_settings">Settings</string>
    <string name="my_nanodegree_apps">My Nanodegree Apps!</string>
    <string name="spotify_streamer">Spotify Streamer</string>
    <string name="scores_app">Scores App</string>
    <string name="library_app">Library App</string>
    <string name="build_it_bigger">Build It Bigger</string>
    <string name="xyz_reader">XYZ Reader</string>
    <string name="my_own_app">Capstone: My Own App</string>
    <string name="my_own_app_tapped">This button will launch my capstone app!</string>
    <string name="spotify_tapped">Spotify tapped</string>
    <string name="scores_tapped">Scores tapped</string>
    <string name="library_tapped">Library tapped</string>
    <string name="build_it_bigger_tapped">Build It Bigger tapped</string>
    <string name="xyz_reader_tapped">XYZ Reader tapped</string>
</resources>
