<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity">

    <TextView
        android:text="@string/my_nanodegree_apps"
        android:layout_width="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_height="wrap_content"
        android:id="@+id/textView"/>

    <Button
        android:id="@+id/spotify_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/spotify_streamer"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/textView"
        android:layout_marginStart="@dimen/button_vertical_margin"/>

    <Button
        android:id="@+id/scores_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scores_app"
        android:layout_below="@+id/spotify_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/button_vertical_margin"/>

    <Button
        android:id="@+id/library_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/library_app"
        android:layout_below="@+id/scores_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/button_vertical_margin"/>

    <Button
        android:id="@+id/build_it_bigger_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
        android:layout_below="@+id/library_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/button_vertical_margin"/>

    <Button
        android:id="@+id/bacon_reader_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bacon_reader"
        android:layout_below="@+id/build_it_bigger_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/button_vertical_margin"/>

    <Button
        android:id="@+id/my_own_app_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_own_app"
        android:layout_below="@+id/bacon_reader_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/button_vertical_margin"/>

</RelativeLayout>
